--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 														</div>
 												</div>
 										</div><!--//item-->
-										
+
 										<div class="item mb-2" style="padding-left: 10px;">
 											<div class="item-heading row align-items-center mb-2">
 													<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
@@ -142,13 +142,17 @@
 							</section><!--//education-section-->
 
 							<section class="award-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">Honor & Award</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">Honors & Awards</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Postdoctoral Award</strong>, Human Behavior and Evolution Society</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2025</div>
+											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+												<strong>New Investigator Award</strong> (Finalist), Human Behavior and Evolution Society</div>
+											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+												2024</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Top Ten Most Impactful Articles of 2021</strong>, Association for Psychological Science</div>
 											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
@@ -190,7 +194,7 @@
 							</section><!--//award-section-->
 
 							<section class="pulication-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">paper published & invited revision</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">publications</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
@@ -281,7 +285,7 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" >
-										<h4 class="item-title">Symposium</h4>
+										<h4 class="item-title">Symposia</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
 										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
@@ -301,7 +305,7 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title">Travel Award</h4>
+										<h4 class="item-title">Travel Awards</h4>
 									</div>
 										<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 											<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
@@ -329,98 +333,50 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title">Paper Presentation & Talk</h4>
+										<h4 class="item-title">Selected Paper Presentations & Talks</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
-										<p>13. <strong>Ko, A.</strong>, Duckworth, A. L., & Milkman, K. L. (February, 2024).
-											A 140,000-teacher megastudy of email nudges to encourage math progress.
-											Paper presentation at the Society for Personality and Social Psychology conference, San Diego, California.</p>
-										<p>12. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., & Kenrick, D. T. (October, 2023).
-											Valuing motives: A cross-cultural analysis of fundamental social motives in 42 countries before and during the pandemic.
-											Paper presentation at the Society of Experimental Social Psychology, Madison, Wisconsin. </p>
-										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (June, 2022).
-											Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
-											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual. </p>
-										<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (June, 2022)
-											Differences in aggression among kin and non-kin.
-											Paper presentation at the Human Behavior & Evolution Society Conference, Virtual.</p>
-										<p>09. Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (May, 2022).
-											Individual differences and ecological influences interact to predict anti-atheist prejudice. P
-											aper presentation at APS Annual Conference, Chicago, Illinois. </p>
-										<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (April, 2022)
-											Differences in aggression among kin and non-kin.
-											Paper presentation at the Northeastern Evolutionary Psychology Society.</p>
-										<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (February, 2022).
-										Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.
-										Data presentation at the Society for Personality and Social Psychology conference, San Francisco, California.</p>
-										<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (February, 2021).
-											Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
-											Paper presentation at the Society for Personality and Social Psychology conference.</p>
-										<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (February, 2020).
-											Family matters: Rethinking the psychology of human social motivation.
-											Paper presentation at the Society for Personality and Social Psychology conference, New Orleans, Louisiana.</p>
-										<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (October, 2019).
-											Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive persistent, robust (but unfounded) stereotype.
-											Paper presentation at the annual meeting of the Society for Experimental Social Psychology, Toronto, Canada. </p>
-										<p>03. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (May, 2019).
-											Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value.
-											Paper presentation at the Human Behavior and Evolution Society, Boston, Massachusetts.</p>
-										<p>02. <strong>Ko, A.</strong>, & Suh, E. M. (August, 2016).
-											Self-perceived mate value and happiness.
-											Paper presentation at the International Society for Quality of Life Research conference, Seoul, South Korea.</p>
-										<p>01. Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (May, 2015).
-											Romantic motives make the relative aspects of happiness salient.
-											Paper presentation at Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
+										<p>13. <strong>Ko, A.</strong>, Duckworth, A. L., & Milkman, K. L. (2024, February).
+											<i>A 140,000-teacher megastudy of email nudges to encourage math progress.</i>
+											 Society for Personality and Social Psychology conference, San Diego, California.</p>
+										<p>12. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., & Kenrick, D. T. (2023, October).
+											<i>Valuing motives: A cross-cultural analysis of fundamental social motives in 42 countries before and during the pandemic.</i>
+											 Society of Experimental Social Psychology, Madison, Wisconsin. </p>
+										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (2022, June).
+											<i>Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
+											Human Behavior & Evolution Society Conference, Virtual. </p>
+										<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2022, June)
+											<i>Differences in aggression among kin and non-kin.</i>
+											Human Behavior & Evolution Society Conference, Virtual.</p>
+										<p>09. Cohen, A. B., Moon, J. W., & <strong>Ko, A.</strong> (2022, May).
+											<i>Individual differences and ecological influences interact to predict anti-atheist prejudice. </i>
+											APS Annual Conference, Chicago, Illinois. </p>
+										<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2022, April)
+											<i>Differences in aggression among kin and non-kin.
+											Northeastern Evolutionary Psychology Society.</p>
+										<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (2022, February).
+										  <i>Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.</i>
+										  Society for Personality and Social Psychology conference, San Francisco, California.</p>
+										<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (2021, February).
+											<i>Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
+											Society for Personality and Social Psychology conference.</p>
+										<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (2020, February).
+											<i>Family matters: Rethinking the psychology of human social motivation.</i>
+											Society for Personality and Social Psychology conference, New Orleans, Louisiana.</p>
+										<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2019, October).
+											<i>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive persistent, robust (but unfounded) stereotype.</i>
+											Society for Experimental Social Psychology, Toronto, Canada. </p>
+										<p>03. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (2019, May).
+											<i>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value.</i>
+											Human Behavior and Evolution Society, Boston, Massachusetts.</p>
+										<p>02. <strong>Ko, A.</strong>, & Suh, E. M. (2016, August).
+											<i>Self-perceived mate value and happiness.</i>
+											International Society for Quality of Life Research conference, Seoul, South Korea.</p>
+										<p>01. Shin, J., Suh., E. M., Kim, J., & <strong>Ko, A.</strong> (2015, May).
+											<i>Romantic motives make the relative aspects of happiness salient.</i>
+											Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
 										</div>
 									</div><!--//Presentation item-->
-
-									<div class="item mb-2">
-										<div class="item-heading row align-items-center mb-2">
-											<h4 class="item-title">Poster Presentation</h4>
-										</div>
-										<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
-										<p>13. <u>Palo A.</u>, <strong>Ko, A.</strong>, & Neuberg, S. N. (April, 2023)
-											Punishing good outcomes & punishing good intentions: Contrasting punishment decisions made by direct recipients vs. third-party observers.
-											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC).
-											<br/>[Third Best Poster Award] </p>
-										<p>12. <u>Sabree, K.</u>, <strong>Ko, A.</strong>, Neuberg, S. N., & Kenrick, D. T. (April, 2021)
-											Are you my father? Paternal uncertainty and genetic testing.
-											Poster presented at Arizona Psychology Undergraduate Research Conference (AZPURC), Virtual.</p>
-										<p>11. <strong>Ko, A.</strong>, Becker, D.V., & Neuberg, S.L. (February, 2021).
-											Is AAAB more diverse than ABBB? On judging diversity.
-											Poster presentation at the Society for Personality and Social Psychology conference.</p>
-										<p>10. Rheem, H., <strong>Ko, A.</strong>, & Becker, D. V. (November, 2019).
-											Conflict evoked by counter-stereotypical implicit associations is processed by the conflict monitoring mechanism like Stroop stimuli.
-											Poster presentation at the Psychonomic Society conference, Montréal, Québec, CA.</p>
-										<p>09. Defelipe, R. P., Crispim, A. C., Ferreira, J. H. B. P., Varella, M. A. C., Valentova, J. V., Varnum, M. E W., Pick, C. M., <strong>Ko, A.</strong>, & Kenrick, D. T. (September, 2019).
-											Reproductive effort as the best predictor of life satisfaction: Evidence from a Brazilian sample.
-											Poster presented at the meeting of the International Society for Human Ethology, Zadar, Croatia.</p>
-										<p>08. <strong>Ko, A.</strong>, Suh, E. M., & Neuberg, S. L. (January, 2019)
-											Is life satisfaction calibrated by self-perceived mate value?
-											Poster presentation at the Society for Personality and Social Psychology conference, Portland, Oregon.</p>
-										<p>07. <strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (July, 2018)
-											Is life satisfaction calibrated by self-perceived mate value?
-											Poster presentation at the Human Behavior and Evolution Society conference, Amsterdam, Netherlands.</p>
-										<p>06. <strong>Ko, A.</strong>, Suh, E.M., & Neuberg, S.L. (March, 2018)
-											Q: Is happiness predicted by self-perceived mate value? A: Am I a man or a woman?
-											Poster presentation at Society for Personality and Social Psychology conference, Atlanta, GA.</p>
-										<p>05. <strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2017).
-											Sex differences in self-perceived mate value and happiness.
-											Poster presentation at the Society for Personality and Social Psychology conference, San Antonio, TX.</p>
-										<p>04. Kim, E., Song, Y., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2017).
-											The relationship between fetal testosterone (digit ratio) and happiness.
-											Poster presentation at the Society for Personality and Social Psychology conference, San Antonio, TX.</p>
-										<p>03. <strong>Ko, A.</strong>, Kim, E., & Suh, E.M. (January, 2016).
-											Women’s hormonal fluctuation and happiness judgment: physical attractiveness matters more during high fertility phase.
-											Poster presentation at Society for Personality and Social Psychology conference, San Diego, CA.</p>
-										<p>02. Kim, E., <strong>Ko, A.</strong>, & Suh, E.M. (January, 2016).
-											Incremental theory of physical attractiveness and happiness among Koreans.
-											Poster presentation at Society for Personality and Social Psychology conference, San Diego, CA.</p>
-										<p>01. Shin, J., Suh., E.M., Kim, J., & <strong>Ko, A.</strong> (January, 2016).
-											Romantic motives make the relative aspects of happiness salient.
-											Poster presentation at the Society for Personality and Social Psychology conference, San Diego, CA.</p>
-									</div>
-								</div><!--//item-->
 
 							</section><!--//conference-section-->
 
@@ -463,6 +419,7 @@
 									<section class="talk-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
 										<ul class="list-unstyled resume-lang-list">
+											<li class="mb-2">University of Pennsylvania, Social Psychology Group <span class="text-muted">| Jan. 2025</span></li>
 											<li class="mb-2">Yonsei University <span class="text-muted">| Apr. 2024</span></li>
 											<li class="mb-2">University of Pennsylvania, Center for Social Norms and Behavioral Dynamics <span class="text-muted">| Feb. 2024</span></li>
 											<li class="mb-2">University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
@@ -498,7 +455,7 @@
 												<div class="resume-degree font-weight-bold">
 													Social Psychology</div>
 												<div class="resume-degree-time text-muted">
-													2022 Fall <br/>(75.3% <u>Most Positive</u>; 22.1% <u>Positive</u>)</div>
+													2022 Fall <br/>(75.3% <u>Most Positive</u>; 22.1% <u>Positive</u>; 98% Class attendance)</div>
 											</li>
 										</ul>
 									</section>
@@ -533,11 +490,12 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Ad Hoc Manuscript Review</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-0"><i>Journal of Personality and Social Psychology,
-												Psychological Science, Journal of Social and Personal Relationships,
-												Journal of Happiness Studies, Personality and Individual Differences,
-												Motivation and Emotion, Current Research in Ecological and Social Psychology,
-												Evolutionary Behavioral Science, Social Cognition,
-												Child & Youth Care Forum</i></li>
+												Psychological Science, Scientific Reports,
+												Journal of Social and Personal Relationships, Journal of Happiness Studies,
+												Personality and Individual Differences, Motivation and Emotion,
+												Current Research in Ecological and Social Psychology, Journal of Social Psychology,
+												Journal of Cross-Cultural Psychology, Evolutionary Behavioral Science, Social Cognition,
+												Communications Psychology, Child & Youth Care Forum/i></li>
 										</ul>
 									</section>
 
