--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 											<i>Valuing motives: A cross-cultural analysis of fundamental social motives in 42 countries before and during the pandemic.</i>
 											 Society of Experimental Social Psychology, Madison, Wisconsin. </p>
 										<p>11. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (2022, June).
-											<i>Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.
+											<i>Responses to partisans are calibrated by a COVID-sensitive behavioral immune system.</i>
 											Human Behavior & Evolution Society Conference, Virtual. </p>
 										<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2022, June)
 											<i>Differences in aggression among kin and non-kin.</i>
