--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 										  <i>Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.</i>
 										  Society for Personality and Social Psychology conference, San Francisco, California.</p>
 										<p>06. Bock, J., <strong>Ko, A.</strong>, & Krems, J. A. (2021, February).
-											<i>Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.
+											<i>Explicit and implicit evaluations of mask-wearers during the COVID-19 pandemic.</i>
 											Society for Personality and Social Psychology conference.</p>
 										<p>05. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J., Barlev, M., Krems, J. A., Varnum, M. E. W., & Kenrick, D. T. (2020, February).
 											<i>Family matters: Rethinking the psychology of human social motivation.</i>
