--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 											Korea Social and Personality Psychological Association conference, Seoul, South Korea.</p>
 										</div>
 									</div><!--//Presentation item-->
+								</div>
 
 							</section><!--//conference-section-->
 
