--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 							</section><!--//conference-section-->
 
-					<!--//resume-main-->
+						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
