--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<hr>
 				<div class="resume-body">
 					<div class="row">
-						<div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
+						<div class="resume-main col-12 col-lg-8 col-xl-9 pe-0 pe-lg-5">
 
 							<section class="Position-section py-3">
 							    <h3 class="text-uppercase resume-section-heading mb-4">CURRENT ACADEMIC POSITIONS</h3>
@@ -281,13 +281,14 @@
 							</section><!--//pulication-section-->
 
 							<section class="conference-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
-
-								<div class="item mb-2">
-									<div class="item-heading row align-items-center mb-2" >
-										<h4 class="item-title">Symposia</h4>
-									</div>
-									<div class="item-content" style="padding-left: 10px;">
+                <h3 class="text-uppercase resume-section-heading mb-3">Conference</h3>
+                <div class="item mb-2">
+                    <div class="item-heading row align-items-center mb-2">
+                        <div class="col-12">
+                            <h4 class="item-title">Symposia</h4>
+                        </div>
+                    </div>
+                    <div class="item-content" style="padding-left: 10px;">
 										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
 											Society of Experimental Social Psychology, Santa Fe, New Mexico.
 											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Shige Oishi, Mark Schaller, Michael Varnum.</p>
@@ -378,9 +379,8 @@
 										</div>
 									</div><!--//Presentation item-->
 							</section><!--//conference-section-->
-						</div><!--//resume-main-->
+						</div>
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
-							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
 								<div class="item">
 									<div class="item-content">
