--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 											<i>Individual differences and ecological influences interact to predict anti-atheist prejudice. </i>
 											APS Annual Conference, Chicago, Illinois. </p>
 										<p>08. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2022, April)
-											<i>Differences in aggression among kin and non-kin.
+											<i>Differences in aggression among kin and non-kin. </i>
 											Northeastern Evolutionary Psychology Society.</p>
 										<p>07. <strong>Ko, A.</strong>, Pick, C. M., Varnum, M. E. W., Becker, D. V., & Neuberg, S. L. (2022, February).
 										  <i>Threat-based antipathy toward Republicans is calibrated within individuals by a disease psychology sensitive to COVID cases.</i>
