--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 												Personality and Individual Differences, Motivation and Emotion,
 												Current Research in Ecological and Social Psychology, Journal of Social Psychology,
 												Journal of Cross-Cultural Psychology, Evolutionary Behavioral Science, Social Cognition,
-												Communications Psychology, Child & Youth Care Forum/i></li>
+												Communications Psychology, Child & Youth Care Forum</li>
 										</ul>
 									</section>
 
