--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
+												<span style="font-weight: bold; color: #b22222;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)
 											</p>
 											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
