--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 												<div class="item-heading row align-items-center mb-2">
 														<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 																<strong>Post-doctoral Researcher </strong><br>
-																<strong>The Wharton School and the School of Arts and Sciences, University of Pennsylvania</strong>
+																The Wharton School and the School of Arts and Sciences, University of Pennsylvania
 														</div>
 														<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 																Philadelphia, PA
@@ -100,7 +100,7 @@
 											<div class="item-heading row align-items-center mb-2">
 													<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 															<strong>Visiting Scholar </strong><br>
-															<strong>Department of Psychology, Arizona State University</strong>
+															Department of Psychology, Arizona State University
 													</div>
 													<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 															Tempe, AZ
@@ -216,7 +216,7 @@
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
-												<span style="font-weight: bold; color: #b22222;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)
+												<span style="font-weight: bold; color: #990000;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)
 											</p>
 											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
