--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
-												<span style="font-weight: bold; color: #990000;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)
+												<p><span style="font-weight: bold; color: #990000;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)</p>
 											</p>
 											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
@@ -259,6 +259,7 @@
 												<i>Psychological Science, 32</i>(6), 871-889.
 												<a href="https://doi.org/10.1177/0956797620983829" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/mp4nu/?view_only=aa72c235049949f2a6d48ee229ffdf9c" target="_blank">[OSF]</a>
+												<p><span style="font-weight: bold; color: #990000;">Top Ten Most Impactful Articles of 2021</span> from the Association for Psychological Science</p>
 											</p>
 										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)
 												<strong>Family matters: Rethinking the psychology of human social motivation</strong>.
