--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2022</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>Graduate Outstanding Research Award</strong>,  The Society for Personality and Social Psychology</div>
+											<strong>Graduate Outstanding Research Award</strong>, Society for Personality and Social Psychology</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2020</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
@@ -266,6 +266,7 @@
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
 												<a href="https://doi.org/10.1177/1745691619872986" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
+												<p><span style="font-weight: bold; color: #990000;">Graduate Outstanding Research Award</span> from the Society for Personality and Social Psychology</p>
 											</p>
 										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019)
 												<strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>.
