--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
-												<p><span style="font-weight: bold; color: #990000;">Postdoctoral Award</span> from the Human Behavior and Evolution Society (2025)</p>
+												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Postdoctoral Award
+													<span style="color: inherit; font-weight: normal;">from the Human Behavior and Evolution Society (2025)</span>
+												</span>
 											</p>
 											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
@@ -259,14 +261,18 @@
 												<i>Psychological Science, 32</i>(6), 871-889.
 												<a href="https://doi.org/10.1177/0956797620983829" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/mp4nu/?view_only=aa72c235049949f2a6d48ee229ffdf9c" target="_blank">[OSF]</a>
-												<p><span style="font-weight: bold; color: #990000;">Top Ten Most Impactful Articles of 2021</span> from the Association for Psychological Science</p>
+												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Top Ten Most Impactful Articles of 2021
+													<span style="color: inherit; font-weight: normal;">from the Association for Psychological Science (2022)</span>
+												</span>
 											</p>
 										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)
 												<strong>Family matters: Rethinking the psychology of human social motivation</strong>.
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
 												<a href="https://doi.org/10.1177/1745691619872986" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
-												<p><span style="font-weight: bold; color: #990000;">Graduate Outstanding Research Award</span> from the Society for Personality and Social Psychology</p>
+												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Graduate Outstanding Research Award
+													<span style="color: inherit; font-weight: normal;">from the Society for Personality and Social Psychology (202)</span>
+												</span>
 											</p>
 										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019)
 												<strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>.
