--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
 										<h4 class="item-title">Selected Paper Presentations & Talks</h4>
 									</div>
 									<div class="item-content" style="padding-left: 35px; text-indent: -25px;">
+										<p> 14. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2025, June).
+											<i>Politics, Pathogens, and Perception: Tracking Adaptive Shifts in the Behavioral Immune System in Real Time. </i>
+											Human Behavior and Evolution Society, Atlantic City, New Jersey.</p>
 										<p>13. <strong>Ko, A.</strong>, Duckworth, A. L., & Milkman, K. L. (2024, February).
 											<i>A 140,000-teacher megastudy of email nudges to encourage math progress.</i>
 											 Society for Personality and Social Psychology conference, San Diego, California.</p>
