--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 													A longitudinal investigation of functional flexibility</strong>.
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
-												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
-												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Postdoctoral Award
+												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</a>
+												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Postdoctoral Award
 													<span style="color: inherit; font-weight: normal;">from the Human Behavior and Evolution Society (2025)</span>
 												</span>
 											</p>
@@ -261,7 +261,7 @@
 												<i>Psychological Science, 32</i>(6), 871-889.
 												<a href="https://doi.org/10.1177/0956797620983829" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/mp4nu/?view_only=aa72c235049949f2a6d48ee229ffdf9c" target="_blank">[OSF]</a>
-												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Top Ten Most Impactful Articles of 2021
+												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Top Ten Most Impactful Articles of 2021
 													<span style="color: inherit; font-weight: normal;">from the Association for Psychological Science (2022)</span>
 												</span>
 											</p>
@@ -270,7 +270,7 @@
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
 												<a href="https://doi.org/10.1177/1745691619872986" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
-												<span style="display: block; margin-left: 25px; color: #99000; font-weight: bold;"> Graduate Outstanding Research Award
+												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Graduate Outstanding Research Award
 													<span style="color: inherit; font-weight: normal;">from the Society for Personality and Social Psychology (202)</span>
 												</span>
 											</p>
