--- a/index.html
+++ b/index.html
@@ -396,6 +396,15 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
 								<div class="item">
 									<div class="item-content">
+										<strong>Behavior Change for Good Initiative</strong></div>
+									<ul class="list-unstyled resume-lab-list">
+										<li class="mb-2"><span class="text-muted">
+											<li>Angela L. Duckworth</li>
+											<li>Katherine L. Milkman</span></li>
+										</ul>
+									</div><!--//item-->
+								<div class="item">
+									<div class="item-content">
 										<strong>Evolution, Ecology, & Social Behavior</strong></div>
 									<ul class="list-unstyled resume-lab-list">
 										<li class="mb-2"><span class="text-muted">Steven L. Neuberg</span></li>
