--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@
 									<div class="item">
 										<div class="item-content">
 											<strong>Evolutionary Social Cognition</strong></div>
-										<ul class="list-unstyled resume-lab-list"><span class="text-muted">
+										<ul class="list-unstyled resume-lab-list">
+											<li class="mb-2"><span class="text-muted">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
 											<li>D. Vaughn Becker</span></li>
