--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 												<div class="item-heading row align-items-center mb-2">
 														<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 																<strong>Post-doctoral Researcher </strong><br>
-																The Wharton School and the School of Arts and Sciences, University of Pennsylvania
+																The Wharton School and the School of Arts and Sciences, <br>
+																University of Pennsylvania
 														</div>
 														<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 																Philadelphia, PA
