--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							    <h3 class="text-uppercase resume-section-heading mb-4">CURRENT ACADEMIC POSITIONS</h3>
 
 									<div class="item mb-2" style="padding-left: 10px;">
-												<div class="item-heading row align-items-center mb-2">
+										<div class="item-heading row align-items-end mb-2">
 														<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 																<strong>Post-doctoral Researcher </strong><br>
 																The Wharton School and the School of Arts and Sciences, <br>
