--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 									<div class="item-content">
 										<strong>Behavior Change for Good Initiative</strong></div>
 									<ul class="list-unstyled resume-lab-list">
-										<li class="mb-2"><span class="text-muted">
+										<span class="text-muted">
 											<li>Angela L. Duckworth</li>
 											<li>Katherine L. Milkman</span></li>
 										</ul>
@@ -415,7 +415,7 @@
 										<div class="item-content">
 											<strong>Evolutionary Social Cognition</strong></div>
 										<ul class="list-unstyled resume-lab-list">
-											<li class="mb-2"><span class="text-muted">
+											<span class="text-muted">
 											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
 											<li>D. Vaughn Becker</span></li>
