--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										</div><!--//item-->
 
 										<div class="item mb-2" style="padding-left: 10px;">
-											<div class="item-heading row align-items-center mb-2">
+											<div class="item-heading row align-items-end mb-2">
 													<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 															<strong>Visiting Scholar </strong><br>
 															Department of Psychology, Arizona State University
