--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
 												<a href="https://doi.org/10.1177/1745691619872986" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
-												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Graduate Outstanding Research Award
+												<span style="display: block; margin-left: 25px; color: #990000; font-weight: bold;"> Outstanding Research Award
 													<span style="color: inherit; font-weight: normal;">from the Society for Personality and Social Psychology (2020)</span>
 												</span>
 											</p>
