--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-2">University of Pennsylvania, Social Psychology Group <span class="text-muted">| Jan. 2025</span></li>
-											<li class="mb-2">University of California, Los Angeles, Social Minds Lab (Jaimie Krems)<span class="text-muted">| Dec. 2024</span></li>
+											<li class="mb-2">University of California, Los Angeles, Social Minds Lab (Jaimie Krems)<span class="text-muted"> | Dec. 2024</span></li>
 											<li class="mb-2">Yonsei University <span class="text-muted">| Apr. 2024</span></li>
 											<li class="mb-2">University of Pennsylvania, Center for Social Norms and Behavioral Dynamics <span class="text-muted">| Feb. 2024</span></li>
 											<li class="mb-2">University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
@@ -516,16 +516,16 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Reference</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
+												<div class="resume-degree font-weight-bold"><strong>Steven L. Neuberg</strong></div>
 												<div class="resume-degree-org text-muted">Foundation Professor</div>
 												<div class="resume-degree-org text-muted">Arizona State University</div>
-												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
+												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div><br>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
 												<div class="resume-degree-org text-muted">President’s Professor</div>
 												<div class="resume-degree-org text-muted">Arizona State University</div>
-												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
+												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div><br>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Angela L. Duckworth</div>
