--- a/index.html
+++ b/index.html
@@ -522,13 +522,13 @@
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div><br>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
+												<div class="resume-degree font-weight-bold"><strong>Douglas T. Kenrick</strong></div>
 												<div class="resume-degree-org text-muted">President’s Professor</div>
 												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div><br>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Angela L. Duckworth</div>
+												<div class="resume-degree font-weight-bold"><strong>Angela L. Duckworth</strong></div>
 												<div class="resume-degree-org text-muted">Rosa Lee and Egbert Chang Professor</div>
 												<div class="resume-degree-org text-muted">University of Pennsylvania</div>
 												<div class="resume-degree-time text-muted">duckwort@wharton.upenn.edu</div>
